2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am: Add original source to TDS zip file.

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Install LaTeX files under consistent subdir name.

	* configure.in: Define LATEX_PACKAGE macro.
	* Makefile.am: Set doc subdir to $(LATEX_PACKAGE).
	* latex/texfont.mk.am: Install LaTeX font files under $(LATEX_PACKAGE).
	* latex/Makefile.am: Install LaTeX stuff under $(LATEX_PACKAGE).

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.1.3 ===

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Remove checks for unused ttf tools.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am:
	  - Add dist-ctan targets.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/fonts-arundina.sty, latex/ltharunsans.fd,
	  latex/ltharunmono.fd, latex/ltharunserif.fd:
	  - Add licensing header.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSansMono*.sfd:
	  - Remove old fi, fl ligatures and add non-ligated ff, fi, fl, ffi,
	    ffl glyphs to avoid ligature effects on monospace font in TeX.
	  - No 'liga' rule is added.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSerif*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSans*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* scripts/gen-pfb.pe: